--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./style.css">
-  <title>Document</title>
+  <title>Ilya Androsov profile</title>
 </head>
 <body>
-    
+  <header>
+    <h1>Ilya Androsov</h1>
+    <img src="./assets/images/MY_PHOTO.JPG" alt="My photo">
+  </header>
+  <main>
+
+  </main>  
 </body>
 </html>
